# GenAIComps

./: .gitignore  .pre-commit-config.yaml  ARANGODB_README.md  Dockerfile  Dockerfile.openEuler  Dockerfile.openeuler  LEGAL_INFORMATION.md  README.md  check_a2t_server.py  freeze_dependency.sh  langchain_test.py  main.py  requirements.in  requirements.txt  setup.py  test  test-yaml.txt  test_audio2text.py  test_data_prep.py  test_docsum.py  update.sh
.github/: CODEOWNERS  code_spell_ignore.txt  pull_request_template.md  test_only.sh
Docker/: hpu.dockerfile
GenAIComps/: __init__.py
comps/: __init__.py  requirements.txt  utils.py  version.py
comps/integrations/haystack/: pyproject.toml
comps/integrations/haystack/src/opea_haystack/: __about__.py
comps/integrations/haystack/src/opea_haystack/embedders/tei/: __init__.py  document_embedder.py  text_embedder.py  truncate.py
comps/integrations/haystack/src/opea_haystack/generators/: __init__.py  generator.py
comps/integrations/haystack/src/opea_haystack/utils/: __init__.py  opea_backend.py  utils.py
comps/integrations/haystack/tests/: __init__.py  conftest.py  test_document_embedder.py  test_generator.py  test_text_embedder.py
comps/integrations/langchain/: Makefile  README.md  pyproject.toml
comps/integrations/langchain/langchain_opea/: __init__.py  chat_models.py  embeddings.py  llms.py
comps/integrations/langchain/samples/: README.md  compose.yaml  qa_streaming.ipynb  summarize.ipynb
comps/integrations/langchain/scripts/: check_imports.py  lint_imports.sh
comps/integrations/langchain/tests/integration_tests/: test_chat_models.py  test_compile.py  test_embeddings.py  test_llms.py
comps/integrations/langchain/tests/unit_tests/: test_chat_models.py  test_embeddings.py  test_imports.py  test_llms.py
comps/web_retrievers/src/: Dockerfile  Dockerfile.mcp  README.md  mcp_google_search_client.py  mcp_google_search_server.py  opea_web_retrievers_microservice.py  pyproject.toml  requirements-cpu.txt  requirements-gpu.txt  requirements.in  requirements.txt
comps/web_retrievers/src/chroma/langchain/: Dockerfile  README.md
comps/web_retrievers/src/integrations/: google_search.py  opea_google_search.py
dev/: README.md
docker/: hpu.dockerfile
tests/: requirements.txt  test_agent_langchain.sh  test_asr.sh  test_asr_whisper.sh  test_bias.py  test_bigcode_eval.py  test_chathistory_mongo.sh  test_data.json  test_dataprep_milvus.sh  test_dataprep_pgvector.sh  test_dataprep_pinecone.sh  test_dataprep_qdrant_langchain.sh  test_dataprep_redis_langchain.sh  test_dataprep_redis_langchain_ray.sh  test_dataprep_redis_llama_index.sh  test_dataprep_redis_multimodal_langchain.sh  test_dataprep_vdms.sh  test_dataprep_vdms_langchain.sh  test_dataprep_vdms_multimodal_langchain.sh  test_embedding_multimodal_langchain.sh  test_embeddings.sh  test_embeddings_langchain-mosec.sh  test_embeddings_langchain-tei.sh  test_embeddings_langchain.sh  test_embeddings_langchain_multimodal.sh  test_embeddings_llama_index-tei.sh  test_embeddings_llama_index.sh  (+77 more)
(+4023 files in other folders)
