[project]
name = "mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "google-api-python-client>=2.159.0",
    "html2text>=2024.2.26",
    "langchain>=0.3.14",
    "langchain-community>=0.3.14",
    "mcp>=1.1.1",
    "ollama>=0.4.6",
    "python-dotenv>=1.0.1",
]
